New improvements and taking off 2016 changes

--- a/PosterInformation.html
+++ b/PosterInformation.html
@@ -83,7 +83,9 @@
                   <p>Deadline for Abstracts: March 21, 2017</p>
                 </header>
 
-                <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<p>Coming Soon!</p>
+
+                <!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
                 <p>One of the features of the 2016 Texas Symposium on Wireless and Microwave Circuits and Systems is a Student Poster Session, and both graduate and undergraduate
                   students are welcome to submit to this.  The poster session will allow the student presenters to present their
@@ -103,7 +105,7 @@
                 Easels that the posters will be placed on will also be provided. Students should bring their posters with them to the symposium and have their posters
                 fastened to the foam boards and placed on the easels in the poster room in time for the start of the poster session.</p>
 
-                <p>Prizes will be awarded for the best student posters, so students are encouraged to submit to the Student Poster Session and to do their best!</p>
+                <p>Prizes will be awarded for the best student posters, so students are encouraged to submit to the Student Poster Session and to do their best!</p> -->
               </article>
 
           </div>
