--- a/Speakers.html
+++ b/Speakers.html
@@ -61,6 +61,7 @@
 								<article>
 									<header>
 										<h2>Speakers</h2>
+										<p>Coming Soon!</p>
 									</header>
 									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
                   <!-- <p>
