--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 									<i class="icon major round-submit-img"></i>
 									<h3>PAPER SUBMISSION</h3>
 									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p>
+									<p><a href="AuthorToolkit.html" target="_blank">Paper Submission Instructions</a></p>
 									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Click Here</a> to submit paper </p>
 								</div>
 							</section>
@@ -141,6 +142,8 @@
 						<header>
 							<h2>Are you ready to submit your paper?</h2>
 							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Click Here</a>
+							<br/><br/>
+							<p ><a href="AuthorToolkit.html" target="_blank" class="paper-instructions">Paper Submission Instructions</a></p>
 						</header>
 					</div>
 				</section>
