--- a/Schedule.html
+++ b/Schedule.html
@@ -61,10 +61,11 @@
 								<article>
 									<header>
 										<h2>Conference Schedule</h2>
+										<p>Coming Soon!</p>
 									</header>
 
 									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
-                    <p></p>
+
 								</article>
 
 						</div>
