--- a/PosterBooklet.html
+++ b/PosterBooklet.html
@@ -71,7 +71,7 @@
             <!-- Content -->
 
               <article>
-                <p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2016 Texas Symposium Poster Booklet</b></p>
+                <p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2016 Texas Symposium Poster Booklet</a></b></p>
               </article>
 
           </div>
