--- a/PastWinners.html
+++ b/PastWinners.html
@@ -74,7 +74,7 @@
             <!-- Content -->
 
               <article>
-                <p><b><a href="files/Student Poster Winners.pdf" target="_blank">Past Winners</b></p>
+                <p><b><a href="files/Student Poster Winners.pdf" target="_blank">Past Winners</a></b></p>
               </article>
 
           </div>
