Implemented new menu changes and changed contact info

--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -20,34 +20,27 @@
 						<div id="main-banner"></div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="CallForPaper.html">Call for Papers</a></li>
-								<li>
-									<a href="Schedule.html">Conference Program</a>
-									<ul>
-										<li><a href="Schedule.html">Schedule</a></li>
-										<li><a href="Speakers.html">Plenary Speakers</a></li>
-										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="PosterInformation.html">Posters</a>
-									<ul>
-										<li><a href="PosterInformation.html">Information</a></li>
-										<li><a href="PosterBooklet.html">Poster Booklet</a></li>
-										<li><a href="PastWinners.html">Past Winners</a></li>
-									</ul>
-								</li>
-								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
-								<li><a href="Registration.html">Registration</a></li>
-								<li class="current"><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
-								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="Contact.html">Contact Us</a></li>
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
+							<li>
+								<a href="Schedule.html">Program</a>
+								<ul>
+									<li><a href="Schedule.html">Schedule</a></li>
+									<li><a href="CallForPaper.html">Call for Papers</a></li>
+									<li><a href="Speakers.html">Plenary Speakers</a></li>
+									<li><a href="PosterInformation.html">Poster Information</a></li>
+									<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+								</ul>
+							</li>
+							<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+							<li><a href="Registration.html">Registration</a></li>
+							<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
+							<li><a href="Sponsors.html">Sponsors</a></li>
+							<li><a href="Contact.html">Contact Us</a></li>
+						</ul>
+					</nav>
 
 				</div>
 
@@ -121,28 +114,8 @@
 							</section>
 							<section class="6u 12u(narrower)">
 								<h3>Questions?</h3>
-								<form>
-									<div class="row 50%">
-										<div class="6u 12u(mobilep)">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="6u 12u(mobilep)">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
+								<p>Please post your question on the LinkedIn group</p>
+								<a href="https://www.linkedin.com/groups/12022353" target="_blank"><img src="images/linkedin_circle_img.png" width=70px; height=70px/></a>
 							</section>
 						</div>
 					</div>
