--- a/PosterInformation.html
+++ b/PosterInformation.html
@@ -22,46 +22,77 @@
 						<div id="main-banner"></div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-                <li><a href="CallForPaper.html">Call for Papers</a></li>
-								<li>
-									<a href="Schedule.html">Conference Program</a>
-									<ul>
-										<li><a href="Schedule.html">Schedule</a></li>
-										<li><a href="Speakers.html">Plenary Speakers</a></li>
-										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
-									</ul>
-								</li>
-								<li class="current">
-									<a href="PosterInformation.html">Posters</a>
-									<ul>
-										<li><a href="PosterInformation.html">Information</a></li>
-										<li><a href="PosterBooklet.html">Poster Booklet</a></li>
-										<li><a href="PastWinners.html">Past Winners</a></li>
-									</ul>
-								</li>
-								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
-								<li><a href="Registration.html">Registration</a></li>
-								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
-								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="Contact.html">Contact Us</a></li>
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
+							<li>
+								<a href="Schedule.html">Program</a>
+								<ul>
+									<li><a href="Schedule.html">Schedule</a></li>
+									<li><a href="CallForPaper.html">Call for Papers</a></li>
+									<li><a href="Speakers.html">Plenary Speakers</a></li>
+									<li><a href="PosterInformation.html">Poster Information</a></li>
+									<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+								</ul>
+							</li>
+							<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+							<li><a href="Registration.html">Registration</a></li>
+							<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
+							<li><a href="Sponsors.html">Sponsors</a></li>
+							<li><a href="Contact.html">Contact Us</a></li>
+						</ul>
+					</nav>
 
 				</div>
 <!-- Main -->
   <section class="wrapper style1">
     <div class="container">
+				<div id="content">
+
+					<!-- Content -->
+
+						<article>
+							<header>
+								<h2>2017 Texas MWCS Symposium</h2>
+								<p>Call for Student Posters</p>
+								<p>Deadline for Abstracts: March 21, 2017</p>
+							</header>
+
+								<p>Coming Soon!</p>
+
+							<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+
+							<p>One of the features of the 2016 Texas Symposium on Wireless and Microwave Circuits and Systems is a Student Poster Session, and both graduate and undergraduate
+								students are welcome to submit to this.  The poster session will allow the student presenters to present their
+								posters and interact with the symposium attendees, including other students, faculty, and industry representatives.
+								Awards will be given for the best poster presentations.</p>
+
+
+							<p>It is not necessary for students to have an oral presentation at the symposium in order to have a poster presentation. However, students who have an
+								oral presentation at the symposium are also invited to have a poster presentation on the same topic if they wish, which will allow them to interact
+								 with the attendees more fully on their topic. </p>
+
+							<p>Student poster presenters are asked to submit a one-page abstract, which will be published in the conference booklet.
+								Please use the template provided on this website for preparing the abstract, and email the completed
+								abstract (as a Word document) to Prof. David R. Jackson at djackson@uh.edu by the deadline of 8:00 a.m. on Monday, March 21, 2016.
+							Students are allowed to prepare their posters in any format that they wish. Either landscape or portrait mode is acceptable.
+							Foam boards measuring 40 inches ´ 60 inches will be provided, along with tacks for fastening the posters to the foam boards.
+							Easels that the posters will be placed on will also be provided. Students should bring their posters with them to the symposium and have their posters
+							fastened to the foam boards and placed on the easels in the poster room in time for the start of the poster session.</p>
+
+							<p>Prizes will be awarded for the best student posters, so students are encouraged to submit to the Student Poster Session and to do their best!</p> -->
+						</article>
+				</div>
+
       <div class="row">
-        <div class="4u 12u(narrower)">
-          <div id="sidebar">
+				<br/><br/>
+				<div class="4u 12u(narrower)">
+          <div class="box highlight">
             <!-- Sidebar -->
             <section>
               <div class="box post">
-                <p><a href="#"><img src="images/poster-icon.jpg" width="270px" height="180px" alt="" /></a></p>
+                <p><img src="images/poster-icon.jpg" width="270px" height="180px" alt="" /></p>
               </div>
               <div class="inner">
                 <h3>Abstract template for posters</h3>
@@ -71,46 +102,49 @@
 
           </div>
         </div>
-        <div class="8u  12u(narrower) important(narrower)">
-          <div id="content">
+				<section class="4u 12u(narrower)">
+          <div class="box highlight">
+            <section>
+              <div class="box post">
+                <p><img src="images/posterBooklet.jpg" width="270px" height="180px" alt="" /></p>
+              </div>
 
-            <!-- Content -->
+							<div id="content">
 
-              <article>
-                <header>
-                  <h2>2017 Texas MWCS Symposium</h2>
-                  <p>Call for Student Posters</p>
-                  <p>Deadline for Abstracts: March 21, 2017</p>
-                </header>
+								<!-- Content -->
 
-									<p>Coming Soon!</p>
+									<article>
+										<p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2016 Texas Symposium Poster Booklet</a></b></p>
+									</article>
 
-                <!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+							</div>
+            </section>
+          </div>
+        </section>
 
-                <p>One of the features of the 2016 Texas Symposium on Wireless and Microwave Circuits and Systems is a Student Poster Session, and both graduate and undergraduate
-                  students are welcome to submit to this.  The poster session will allow the student presenters to present their
-                  posters and interact with the symposium attendees, including other students, faculty, and industry representatives.
-                  Awards will be given for the best poster presentations.</p>
+				<div class="4u 12u(narrower)">
+          <div class="box highlight">
+            <!-- Sidebar -->
+            <section>
+              <div class="box post">
+                <p><img src="images/winners.jpg" width="270px" height="180px" alt=""/></p>
+              </div>
+							<div id="content">
 
+		            <!-- Content -->
 
-                <p>It is not necessary for students to have an oral presentation at the symposium in order to have a poster presentation. However, students who have an
-                  oral presentation at the symposium are also invited to have a poster presentation on the same topic if they wish, which will allow them to interact
-                   with the attendees more fully on their topic. </p>
+		              <article>
+		                <p><b><a href="files/Student Poster Winners.pdf" target="_blank">Past Winners</a></b></p>
+		              </article>
 
-                <p>Student poster presenters are asked to submit a one-page abstract, which will be published in the conference booklet.
-                  Please use the template provided on this website for preparing the abstract, and email the completed
-                  abstract (as a Word document) to Prof. David R. Jackson at djackson@uh.edu by the deadline of 8:00 a.m. on Monday, March 21, 2016.
-                Students are allowed to prepare their posters in any format that they wish. Either landscape or portrait mode is acceptable.
-                Foam boards measuring 40 inches ´ 60 inches will be provided, along with tacks for fastening the posters to the foam boards.
-                Easels that the posters will be placed on will also be provided. Students should bring their posters with them to the symposium and have their posters
-                fastened to the foam boards and placed on the easels in the poster room in time for the start of the poster session.</p>
-
-                <p>Prizes will be awarded for the best student posters, so students are encouraged to submit to the Student Poster Session and to do their best!</p> -->
-              </article>
+		          </div>
+            </section>
 
           </div>
         </div>
-      </div>
+</div>
+
+
     </div>
   </section>
   <!-- Footer -->
@@ -134,31 +168,11 @@
               <li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
             </ul>
           </section>
-          <section class="6u 12u(narrower)">
-            <h3>Questions?</h3>
-            <form>
-              <div class="row 50%">
-                <div class="6u 12u(mobilep)">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="6u 12u(mobilep)">
-                  <input type="email" name="email" id="email" placeholder="Email" />
-                </div>
-              </div>
-              <div class="row 50%">
-                <div class="12u">
-                  <textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-                </div>
-              </div>
-              <div class="row 50%">
-                <div class="12u">
-                  <ul class="actions">
-                    <li><input type="submit" class="button alt" value="Send Message" /></li>
-                  </ul>
-                </div>
-              </div>
-            </form>
-          </section>
+					<section class="6u 12u(narrower)">
+						<h3>Questions?</h3>
+						<p>Please post your question on the LinkedIn group</p>
+						<a href="https://www.linkedin.com/groups/12022353" target="_blank"><img src="images/linkedin_circle_img.png" width=70px; height=70px/></a>
+					</section>
         </div>
       </div>
       <!-- Sponsors -->
