Fixed nav issue

--- a/PhotoGallery.html
+++ b/PhotoGallery.html
@@ -22,9 +22,9 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
-							<li>
+							<li class="current">
 								<a href="Schedule.html">Program</a>
 								<ul>
 									<li><a href="Schedule.html">Schedule</a></li>
@@ -55,16 +55,28 @@
 									</header>
 									<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
 									<div id="photo-gallery">
-									  <img id="image1" src="https://drive.google.com/drive/folders/0B_6NhvAit7yYcGUySm1KR3R6dVk/TXSWMCS-2016 (110).JPG" />
-									  <img id="image2" src="https://drive.google.com/file/d/0B_6NhvAit7yYdHdqbG9HaUx6TjQ/view?usp=sharingTXSWMCS-2016 (110).JPG" />
-									  <img id="image3" src="https://drive.google.com/drive/folders/0B_6NhvAit7yYcGUySm1KR3R6dVk/TXSWMCS-2016 (120).JPG" />
-									  <img id="image4" src="https://drive.google.com/drive/folders/0B_6NhvAit7yYcGUySm1KR3R6dVk/TXSWMCS-2016 (130).JPG" />
+									  <img id="image1" src="images/TXSWMCS-2016 (007).JPG" />
+									  <img id="image2" src="images/TXSWMCS-2016 (010).JPG" />
+									  <img id="image3" src="images/TXSWMCS-2016 (25).JPG" />
+									  <img id="image4" src="images/TXSWMCS-2016 (40).JPG" />
+										<img id="image5" src="images/TXSWMCS-2016 (54).JPG" />
+										<img id="image6" src="images/TXSWMCS-2016 (62).JPG" />
+										<img id="image7" src="images/TXSWMCS-2016 (89).JPG" />
+										<img id="image8" src="images/TXSWMCS-2016 (101).JPG" />
+										<img id="image9" src="images/TXSWMCS-2016 (104).JPG" />
+										<img id="image10" src="images/TXSWMCS-2016 (108).JPG" />
 									</div>
-									<div id="gallery-slider">
+									<div id="gallery-slider" class="gallery-slider-position">
 									  <a href="#image1">1</a>
 									  <a href="#image2">2</a>
 									  <a href="#image3">3</a>
 									  <a href="#image4">4</a>
+										<a href="#image5">5</a>
+										<a href="#image6">6</a>
+										<a href="#image7">7</a>
+										<a href="#image8">8</a>
+										<a href="#image9">9</a>
+										<a href="#image10">10</a>
 									</div>
 								</article>
 						</div>
