--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="conf-content"><br/>
 						<p>The Texas Symposium on Wireless and Microwave Circuits and Systems conference committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas, on March 30-31, 2017.
 						<br/>
-						Authors from the industry and academia worldwide are invited to submit four-page papers of their original and previously unpublished work.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
+						Authors from the industry and academia worldwide are invited to submit four-page papers of their original and previously unpublished work. <br/> Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
 							<ul>
 								<li>• &nbsp;	RF and microwave circuits and systems  </li>
 								<li>• &nbsp;	Devices, modeling, testing and measurement techniques </li>
