--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -22,7 +22,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
 							<li>
 								<a href="Schedule.html">Program</a>
@@ -34,7 +34,7 @@
 									<li><a href="PhotoGallery.html">Photo Gallery</a></li>
 								</ul>
 							</li>
-							<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+							<li class="current"><a href="AuthorToolkit.html">Author Toolkit</a></li>
 							<li><a href="Registration.html">Registration</a></li>
 							<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 							<li><a href="Sponsors.html">Sponsors</a></li>
