--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
 							<li>
 								<a href="Schedule.html">Program</a>
@@ -38,7 +38,7 @@
 							<li><a href="Registration.html">Registration</a></li>
 							<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 							<li><a href="Sponsors.html">Sponsors</a></li>
-							<li><a href="Contact.html">Contact Us</a></li>
+							<li class="current"><a href="Contact.html">Contact Us</a></li>
 						</ul>
 					</nav>
 
