--- a/Schedule.html
+++ b/Schedule.html
@@ -22,9 +22,9 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
-							<li>
+							<li class="current">
 								<a href="Schedule.html">Program</a>
 								<ul>
 									<li><a href="Schedule.html">Schedule</a></li>
