--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -22,8 +22,8 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<li><a href="SteeringCommittee.html">Organizing Committee</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="current"><a href="SteeringCommittee.html">Organizing Committee</a></li>
 							<li>
 								<a href="Schedule.html">Program</a>
 								<ul>
