Removed css class

--- a/PhotoGallery.html
+++ b/PhotoGallery.html
@@ -66,7 +66,7 @@
 										<img id="image9" src="images/TXSWMCS-2016 (104).JPG" />
 										<img id="image10" src="images/TXSWMCS-2016 (108).JPG" />
 									</div>
-									<div id="gallery-slider" class="gallery-slider-position">
+									<div id="gallery-slider">
 									  <a href="#image1">1</a>
 									  <a href="#image2">2</a>
 									  <a href="#image3">3</a>
