Added default image for the gallery page

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -31,7 +31,7 @@
 									<li><a href="CallForPaper.html">Call for Papers</a></li>
 									<li><a href="Speakers.html">Plenary Speakers</a></li>
 									<li><a href="PosterInformation.html">Poster Information</a></li>
-									<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+									<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 								</ul>
 							</li>
 							<li class="current"><a href="AuthorToolkit.html">Author Toolkit</a></li>
