Added conf dates

--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -76,11 +76,12 @@
 													<li>• &nbsp;	Emerging wireless technologies</li>
 												</ul>
 
-												<p>2016 Texas Symposium on Wireless and Microwave Circuits and Systems <br/>
-			                  Baylor University<br/>
-			                  Waco,Texas<br/>
-			                  March 31- March 31, 2017</p>
-
+												<p><b>Schedule for paper submission: </b></p>
+												<ul>
+				                  <li>• &nbsp;Paper submission deadline: &nbsp;&nbsp;&nbsp;       January 31, 2017</li>
+				                  <li>• &nbsp;Author notification:  &nbsp;&nbsp;&nbsp;   February 26, 2017</li>
+				                  <li>• &nbsp;Final paper submission deadline: &nbsp;&nbsp;&nbsp;  March 10, 2017</li>
+											 </ul>
 										<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.</p>
 								</div>
 							</article>
