New changes- text change

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -67,8 +67,7 @@
 								<div class="box highlight">
 									<i class="icon major round-submit-img"></i>
 									<h3>Paper Submission</h3>
-									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p>
-									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Click Here</a> to submit paper </p>
+									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></p>
 								</div>
 							</section>
 						</div>
