--- a/Registration.html
+++ b/Registration.html
@@ -52,7 +52,7 @@
 								<header>
 									<!-- <i class="icon major round-register-img"></i> -->
 										<!-- <p><b><a href="Registration.html" target="_blank">2017 Conference Registration </a></b></p> -->
-											<p><b>2017 Conference Registration</b></p>
+											<p><b>Conference Registration</b></p>
 												<h2><b>Coming Soon!</h2></p>
 								</header>
 								<!-- <iframe src="Registration.html" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe> -->
