--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
 								<li>• &nbsp;	Internet of Things</li>
 								<li>• &nbsp;	Emerging wireless technologies</li>
 							</ul>
+
+							<!-- <p><b>Schedule for paper submission: </b></p>
+							<ul>
+								<li>• &nbsp;Paper submission deadline: &nbsp;&nbsp;&nbsp;       January 31, 2017</li>
+								<li>• &nbsp;Author notification:  &nbsp;&nbsp;&nbsp;   February 26, 2017</li>
+								<li>• &nbsp;Final paper submission deadline: &nbsp;&nbsp;&nbsp;  March 10, 2017</li>
+						 </ul> -->
+
 							<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.</p>
 					</div>
 				</section>
@@ -104,9 +112,9 @@
 								<div class="box highlight">
 									<i class="icon major round-submit-img"></i>
 									<h3>PAPER SUBMISSION</h3>
-									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p>
+									<!-- <p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at <a href="http://TexasSymposium.org" target="_blank">http://TexasSymposium.org</a></p> -->
 									<p><a href="AuthorToolkit.html" target="_blank">Paper Submission Instructions</a></p>
-									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Click Here</a> to submit paper </p>
+									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></p>
 								</div>
 							</section>
 						</div>
@@ -119,12 +127,13 @@
 						<div class="container">
 						<header class="major">
 						<!-- <header id="callPaperBlueBontBanner"> -->
+						<!-- <img src="images/bluebonettflower.jpg" /> -->
 							<h2>Call for Papers</h2>
 								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems <br/>
 								 March 30 - 31<br/>
 								 Baylor University, <br/>Waco, Texas</h3>
 								<br/>
-							<p><a href="Registration.html" target="_blank">2017 Conference Registration </a></p>
+							<p><a href="Registration.html" target="_blank">Conference Registration </a></p>
 						</header>
 					</div>
 				</section>
@@ -133,8 +142,8 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Are you ready to submit your paper?</h2>
-							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Click Here</a>
+							<!-- <h2>Submit paper</h2> -->
+							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Submit paper</a>
 							<br/><br/>
 							<p ><a href="AuthorToolkit.html" target="_blank" class="paper-instructions">Paper Submission Instructions</a></p>
 						</header>
