Added few more names

--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -60,7 +60,7 @@
                     <p><b>Local Arrangements and Exhibitors Chair</b><br/> Charles Baylis, Baylor University</p>
                     <p><b>Registration Chair</b><br/> Liang Dong, Baylor University</p>
                     <p><b>Publicity Chairs</b><br/>Donald Lie, Texas Tech University<br/> Rashaunda Henderson, University of Texas at Dallas</p>
-                    <!-- <p><b>Sponsors and Exhibitors Chairs</b><br/>Benjamin Eynon, Samsung<br/>Charles Baylis, Baylor University</p> -->
+                    <p><b>Sponsors and Exhibitors Chairs</b><br/>Charles Baylis, Baylor University<br/>Oren Eliezer, PHAZR</p>
                     <p><b>Student Posters and Presentations Chair</b><br/>David Jackson, University of Houston</p>
                     <p><b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)</p>
                     <p><b>Organization Chair</b><br/>Robert J. Marks II, Baylor University</p>
