Fixed submit paper text

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<!-- <h2>Submit paper</h2> -->
-							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Submit paper</a>
+							<h2>Are you ready to submit your paper?</h2>
+							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button" target="_blank">Click Here</a>
 							<br/><br/>
 							<p ><a href="AuthorToolkit.html" target="_blank" class="paper-instructions">Paper Submission Instructions</a></p>
 						</header>
