Fixed footer link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<section  id="banner" >
 					<header>
 						<h2>Conference Program:&nbsp;</h2>
-						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank" class="button">Agenda and Technical Program</a>
+						<a href="Schedule.html" target="_blank" class="button">Agenda and Technical Program</a>
 					</header>
 				</section>
 
@@ -160,7 +160,7 @@
 									<li><a href="Registration.html" target="_blank">Registration</a></li>
 									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
 									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
-									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
+									<li><a href="Schedule.html" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
