--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -17,7 +17,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-					<div id="main-banner"></div>
+					<!-- <div id="main-banner"></div> -->
 
 					<!-- Nav -->
 					<nav id="nav">
@@ -85,14 +85,14 @@
 									<li><a href="Registration.html" target="_blank">Registration</a></li>
 									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
 									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
-									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
+									<li><a href="Schedule.html" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
 								<h3>More Information</h3>
 								<ul class="links">
 									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
-									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas (including weather)</a></li>
 									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
