--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     <link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
-		<title>Texas Symposium - Steering Committee</title>
+		<title>Texas Symposium - Organizing Committee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,7 +17,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-					<!-- <div id="main-banner"></div> -->
+					<div id="main-banner"></div>
 
 					<!-- Nav -->
 					<nav id="nav">
@@ -53,19 +53,19 @@
   									<header>
   										<h2>Organizing Committee</h2>
   									</header>
-  									<p><b>General Chair</b><br/>Oren Eliezer, PHAZR</p>
-										<p><b>General Co-chair</b><br/>Alan Davis, University of Texas at Arlington</p>
-                    <p><b>Technical Program Chair</b><br/>Taylor Barton, University of Colorado</p>
-                    <p><b>Technical Program Co-Chairs</b><br/> Bryant Baker, Qorvo<br/> Yang Li, Baylor University</p>
-                    <p><b>Local Arrangements and Exhibitors Chair</b><br/> Charles Baylis, Baylor University</p>
-                    <p><b>Registration Chair</b><br/> Liang Dong, Baylor University</p>
-                    <p><b>Publicity Chairs</b><br/>Donald Lie, Texas Tech University<br/> Rashaunda Henderson, University of Texas at Dallas</p>
-                    <p><b>Sponsors and Exhibitors Chairs</b><br/>Charles Baylis, Baylor University<br/>Oren Eliezer, PHAZR</p>
-                    <p><b>Student Posters and Presentations Chair</b><br/>David Jackson, University of Houston</p>
-                    <p><b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)</p>
-                    <p><b>Organization Chair</b><br/>Robert J. Marks II, Baylor University</p>
-                    <p><b>Conference Advisor</b><br/>Randall Jean, Baylor University</p>
-                    <p><b>Webmaster</b><br/>Ruchi Rawal, Copart</p>
+  									<p><b>General Chair</b><br/>Oren Eliezer, PHAZR<br/>
+										<b>General Co-chair</b><br/>Alan Davis, University of Texas at Arlington<br/>
+                    <b>Technical Program Chair</b><br/>Taylor Barton, University of Colorado<br/>
+                    <b>Technical Program Co-Chairs</b><br/> Bryant Baker, Qorvo<br/> Yang Li, Baylor University<br/>
+                    <b>Local Arrangements and Exhibitors Chair</b><br/> Charles Baylis, Baylor University<br/>
+                    <b>Registration Chair</b><br/> Liang Dong, Baylor University<br/>
+                    <b>Publicity Chairs</b><br/>Donald Lie, Texas Tech University<br/> Rashaunda Henderson, University of Texas at Dallas<br/>
+                    <b>Sponsors and Exhibitors Chairs</b><br/>Charles Baylis, Baylor University<br/>Oren Eliezer, PHAZR<br/>
+                    <b>Student Posters and Presentations Chair</b><br/>David Jackson, University of Houston<br/>
+                    <b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)<br/>
+                    <b>Organization Chair</b><br/>Robert J. Marks II, Baylor University<br/>
+                    <b>Conference Advisor</b><br/>Randall Jean, Baylor University<br/>
+                    <b>Webmaster</b><br/>Ruchi Rawal, Copart</p>
                     <br/>
                     <span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="500px"/></span>
 								</article>
