--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<header class="major">
 						<!-- <header id="callPaperBlueBontBanner"> -->
 						<!-- <img src="images/bluebonettflower.jpg" /> -->
-							<h2>Call for Papers</h2>
+							<h2><a href="files/CfP_TXWMCS2017.pdf" target="_blank"> Call for Papers</a></h2>
 								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems <br/>
 								 March 30 - 31<br/>
 								 Baylor University, <br/>Waco, Texas</h3>
