Added call for papers pdf on Auther toolkit

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -55,14 +55,14 @@
 									<a href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html" target="_blank"> <img alt="Latex Document" src="images/latex.png" width="70" height="60"> </a>
 								</div>
 							</section>
-							<!-- <section class="4u 12u(narrower)">
+							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major round-copy-img"></i>
-									<h3>IEEE Copyright Form</h3>
-									<a href="files/IEEE_Copyright_Form(Paper_XX).doc"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a>
+									<i class="icon major round-paper-call-img"></i>
+									<h3>Call for Papers</h3>
+									<a href="files/CfP_TXWMCS2017.pdf"><img alt="Call for Papers" src="images/pdf.png" target="_blank" width="70" height="80"></a>
 										</p>
 								</div>
-							</section> -->
+							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major round-submit-img"></i>
