--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 				</section>
 					<section  id="banner" >
 					<header>
-						<h2>Conference Program:&nbsp;</h2>
-						<a href="Schedule.html" target="_blank" class="button">Agenda and Technical Program</a>
+						<!-- <h2>Conference Program:&nbsp;</h2> -->
+						<!-- <a href="Schedule.html" target="_blank" class="button">Agenda and Technical Program</a> -->
+						<h2>Call for Papers:&nbsp;</h2>
+						<a href="files/CfP_TXWMCS2017.pdf" target="_blank" class="button">View PDF</a>
 					</header>
 				</section>
 
