updated link for the sponsor

--- a/Sponsors.html
+++ b/Sponsors.html
@@ -59,7 +59,7 @@
                       <li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
                       <li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
                       <li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
-											<li><a href="" class="icon" target="_blank"><img src="images/ChannelScience-logo.jpg" width="260px" height="90px"/></a></li>
+											<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.jpg" width="260px" height="90px"/></a></li>
                     </ul>
 					</div>
 				</section>
