Adding keynotes, updated call for papers pdf and added new sponor

--- a/Speakers.html
+++ b/Speakers.html
@@ -53,87 +53,109 @@
 
 								<article>
 									<header>
-										<h2>Speakers</h2>
-										<p>Coming Soon!</p>
+										<h2>Keynotes</h2>
 									</header>
-									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
-                  <!-- <p>
-  									<h3>General Chair</h3>
-                    Oren Eliezer, PHAZR
-                    <h3>Technical Program Chair</h3>
-                    Taylor Barton, University of Colorado
-                  </p> -->
-								</article>
-						</div>
-					</div>
-				</section>
+									<h3>History and State-of-The-Art in Large Signal Modeling for RF/Microwave Power Amplifier Development</h3>
+									<h2>	Dr. Larry Dunleavy</h2>
 
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-              <section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Quick Links</h3>
-								<ul class="links">
-									<li><a href="Registration.html" target="_blank">Registration</a></li>
-									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
-									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
-									<li><a href="Schedule.html" target="_blank">Conference Program</a></li>
-								</ul>
-							</section>
-							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Information</h3>
-								<ul class="links">
-									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
-									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
-									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
-								</ul>
-							</section>
-              <section class="6u 12u(narrower)">
-								<h3>Questions?</h3>
-								<p>Please post your question on the LinkedIn group</p>
-								<a href="https://www.linkedin.com/groups/12022353" target="_blank"><img src="images/linkedin_circle_img.png" width=70px; height=70px/></a>
-							</section>
-						</div>
-					</div>
-          <!-- Sponsors -->
+									<p>An up-to-date survey of large signal (LS) and nonlinear models for power amplifier design will be presented,
+										covering a wide range of device types, along with a brief history for the various categories of models.
+										An emphasis will be placed on compact LS models for GaN, GaAs, and Silicon FET and HEMT models suitable for power amplifier design.
+										Behavioral LS models will be presented along with advantages and disadvantages as compared to compact models.
+										Important developments in related technologies that have had significant impact on large signal modeling,
+										such as automated small and large signal network analyzers, wafer probe capability, and harmonic balance simulator software,
+										will also be discussed.
+									</p>
+									<div class="row">
+										<div class="4u 12u(narrower)">
+								  	<div id="sidebar">
+											<section>
+												<img src="images/Speaker-LarryDunleavy.jpg" alt="" height="300px" width="250px"/>
+										</section>
+								</div>
+							</div>
 
-					<ul class="icons sponsor_img">
-						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
-						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
-			      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
-						<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
-						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
-						<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="100px !important"  height="60px" /></a></li>
-						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
-						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
-					</ul>
-        <br/><br/>
-					<!-- Icons -->
-          <ul class="icons">
-            <li><a href="#" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-            <li><a href="https://www.linkedin.com/groups/12022353" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-            <li><a href="#" class="icon fa-google-plus"><span class="label" target="_blank">Google+</span></a></li>
-          </ul>
+									<div class="8u  12u(narrower)">
+					          <div id="content">
+										<p>
+											Dr. Larry Dunleavy co-founded Modelithics, Inc. in 2001 to provide improved modeling solutions and
+											high quality microwave measurement services for radio and microwave frequency circuit designers.
+											He is currently serving as President and CEO at Modelithics.
+											He also maintains a position as a Professor within University of South Florida’s Department of Electrical Engineering,
+											 where he has been a faculty member since 1990.
+											 In this role, he has been teaching in the area of RF & Microwave circuits and measurements for over 26 years.
+											 Prior to this he worked as a microwave circuit design engineer at Hughes Aircraft and E-Systems companies.
+										</p>
+										</div></div>
+										</div>
 
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>© 2016 Texas Symposium. All rights reserved.</li>
-							</ul>
-						</div>
+										<!-- Footer -->
+											<div id="footer">
+												<div class="container">
+													<div class="row">
+														<section class="3u 6u(narrower) 12u$(mobilep)">
+															<h3>Quick Links</h3>
+															<ul class="links">
+																<li><a href="Registration.html" target="_blank">Registration</a></li>
+																<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
+																<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+																<li><a href="Schedule.html" target="_blank">Conference Program</a></li>
+															</ul>
+														</section>
+														<section class="3u 6u$(narrower) 12u$(mobilep)">
+															<h3>More Information</h3>
+															<ul class="links">
+																<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
+																<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+																<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
+															</ul>
+														</section>
+														<section class="6u 12u(narrower)">
+															<h3>Questions?</h3>
+															<p>Please post your question on the LinkedIn group</p>
+															<a href="https://www.linkedin.com/groups/12022353" target="_blank"><img src="images/linkedin_circle_img.png" width=70px; height=70px/></a>
+														</section>
+													</div>
+												</div>
+												<!-- Sponsors -->
 
-				</div>
+												<ul class="icons sponsor_img">
+													<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
+													<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+													<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
+													<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
+													<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
+													<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="100px !important"  height="60px" /></a></li>
+													<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+													<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png"/></a></li>
+													<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
 
-		</div>
+												</ul>
+											<br/><br/>
+												<!-- Icons -->
+												<ul class="icons">
+													<li><a href="#" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+													<li><a href="https://www.linkedin.com/groups/12022353" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+													<li><a href="#" class="icon fa-google-plus"><span class="label" target="_blank">Google+</span></a></li>
+												</ul>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+												<!-- Copyright -->
+													<div class="copyright">
+														<ul class="menu">
+														<li>© 2016 Texas Symposium. All rights reserved.</li>
+														</ul>
+													</div>
 
-	</body>
+											</div>
+
+									</div>
+
+									<!-- Scripts -->
+										<script src="assets/js/jquery.min.js"></script>
+										<script src="assets/js/jquery.dropotron.min.js"></script>
+										<script src="assets/js/skel.min.js"></script>
+										<script src="assets/js/util.js"></script>
+										<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+										<script src="assets/js/main.js"></script>
+			</body>
 </html>
