--- a/Speakers.html
+++ b/Speakers.html
@@ -53,7 +53,7 @@
 
 								<article>
 									<header>
-										<h2>Keynotes</h2>
+										<h2>Keynote</h2>
 									</header>
 									<h3>History and State-of-The-Art in Large Signal Modeling for RF/Microwave Power Amplifier Development</h3>
 									<h2>	Dr. Larry Dunleavy</h2>
