Updated poster information and the word teamplate

--- a/PosterInformation.html
+++ b/PosterInformation.html
@@ -32,7 +32,7 @@
 									<li><a href="Schedule.html">Schedule</a></li>
 									<li><a href="CallForPaper.html">Call for Papers</a></li>
 									<li><a href="Speakers.html">Plenary Speakers</a></li>
-									<li><a href="PosterInformation.html">Poster Information</a></li>
+									<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 									<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 								</ul>
 							</li>
@@ -55,7 +55,9 @@
 						<article>
 							<header>
 								<h2>2017 Texas MWCS Symposium</h2>
-								<p>Call for Student Posters</p>
+								<br/>
+								<h2>Poster Information</h2>
+								<p><a href="files/Call for Student Posters.docx" target="_blank">Call for Student Posters</a></p>
 								<p>Deadline for Abstracts: March 21, 2017</p>
 							</header>
 
