--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
-										<li><a href="PosterInformation.html">Poster Information</a></li>
+										<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 										<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 									</ul>
 								</li>
@@ -76,7 +76,8 @@
 								<li>• &nbsp;Final paper submission deadline: &nbsp;&nbsp;&nbsp;  March 10, 2017</li>
 						 </ul> -->
 
-							<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.</p>
+							<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.<br/>
+							The conference will also include a student poster competition with prizes.  Posters presented in this session will not be published and may be based on previously published material.</p>
 					</div>
 				</section>
 					<section  id="banner" >
