--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -30,7 +30,7 @@
 									<li><a href="Schedule.html">Schedule</a></li>
 									<li><a href="CallForPaper.html">Call for Papers</a></li>
 									<li><a href="Speakers.html">Plenary Speakers</a></li>
-									<li><a href="PosterInformation.html">Poster Information</a></li>
+									<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 									<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 								</ul>
 							</li>
