added new deadline and updated call for papers

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -59,7 +59,7 @@
 								<div class="box highlight">
 									<i class="icon major round-paper-call-img"></i>
 									<h3>Call for Papers</h3>
-									<a href="files/CfP_TXWMCS2017.pdf"><img alt="Call for Papers" src="images/pdf.png" target="_blank" width="70" height="80"></a>
+									<a href="files/CfP_TXWMCS2017.pdf"><img alt="Call for Papers" src="images/pdf.png" target="_blank" width="70" height="80"/></a>
 										</p>
 								</div>
 							</section>
