--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -81,7 +81,7 @@
 
 												<p><b>Schedule for paper submission: </b></p>
 												<ul>
-				                  <li>• &nbsp;Paper submission deadline: &nbsp;&nbsp;&nbsp;       January 31, 2017</li>
+				                  <li>• &nbsp;Paper submission deadline: &nbsp;&nbsp;&nbsp;       <del>January 31, 2017</del> &nbsp;extended: <b>February 8, 2017</b></li>
 				                  <li>• &nbsp;Author notification:  &nbsp;&nbsp;&nbsp;   February 26, 2017</li>
 				                  <li>• &nbsp;Final paper submission deadline: &nbsp;&nbsp;&nbsp;  March 10, 2017</li>
 											 </ul>
