--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<div class="box highlight">
 									<i class="icon major round-cal-img"></i>
 									<h3>IMPORTANT DATES</h3>
-										<p><b>January 31, 2017</b>  <br/>Full Paper Submission Deadline</p>
+										<p><del>January 31, 2017</del>  &nbsp;extended:<b>February 8, 2017</b> <br/>Full Paper Submission Deadline</p>
 										<p><b>February 26, 2017</b> <br/>Author Notifications</p>
 										<p><b>March 10, 2017</b> <br/>Final Paper Submission</p>
 								</div>
