added new deadline on home page and fixed date on poster info

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 						<!-- <a href="Schedule.html" target="_blank" class="button">Agenda and Technical Program</a> -->
 						<h2>Call for Papers:&nbsp;</h2>
 						<a href="files/CfP_TXWMCS2017.pdf" target="_blank" class="button">View PDF</a>
+						<br/>
+					<span style="text-shadow: 1px 1px 1px #000; background: orange;">	<b>Deadline for paper submissions extended to February 8th, 2017.</b></span>
+
 					</header>
 				</section>
 
