--- a/PosterInformation.html
+++ b/PosterInformation.html
@@ -54,14 +54,12 @@
 
 						<article>
 							<header>
-								<h2>2017 Texas MWCS Symposium</h2>
-								<br/>
 								<h2>Poster Information</h2>
 								<p><a href="files/Call for Student Posters.docx" target="_blank">Call for Student Posters</a></p>
-								<p>Deadline for Abstracts: March 21, 2017</p>
+								<p>Deadline for Abstracts: March 22, 2017</p>
 							</header>
 
-								<p>Coming Soon!</p>
+								<!-- <p>Coming Soon!</p> -->
 
 							<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
